# ld19

./: CMakeLists.txt  main.cpp
inc/: averageCoord.h  coord.h  ld19.h
src/: coord.cpp  ld19.cpp
ut/: CMakeLists.txt  coord_ut.cpp
